--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <main>
 
-        <section id="search-engine-optimization" class="search-engine-optimization">
+        <section id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -45,7 +45,7 @@
             </p>
         </section>
 
-        <section id="online-reputation-management" class="online-reputation-management">
+        <section id="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
@@ -53,14 +53,14 @@
             </p>
         </section>
 
-        <section id="social-media-marketing" class="social-media-marketing">
+        <section id="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </section>
-        
+
     </main>
 
     <div class="benefits">
