--- a/index.html
+++ b/index.html
@@ -63,35 +63,41 @@
 
     </main>
 
-    <div class="benefits">
-        <div class="benefit-lead">
+    <aside>
+
+        <article>
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img class="aside-images" src="./assets/images/lead-generation.png" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-        </div>
-        <div class="benefit-brand">
+        </article>
+
+        <article>
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img class="aside-images" src="./assets/images/brand-awareness.png" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
-        </div>
-        <div class="benefit-cost">
+        </article>
+        
+        <article>
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png"></img>
+            <img class="aside-images" src="./assets/images/cost-management.png"></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        </div>
-    </div>
-    <div class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
+        </article>
+
+    </aside>
+
+    <footer>
+        <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
+    
 </body>
 
 </html>
